WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216686
Unchecked exception detected at JSC::JSModuleNamespaceObject::defineOwnProperty
https://bugs.webkit.org/show_bug.cgi?id=216686
Summary
Unchecked exception detected at JSC::JSModuleNamespaceObject::defineOwnProperty
Ryan Haddad
Reported
2020-09-17 21:18:07 PDT
** The following JSC stress test failures have been introduced: modules.yaml/modules/module-namespace-object-define-own-property.js.default-ftl-modules modules.yaml/modules/module-namespace-object-define-own-property.js.default-modules modules.yaml/modules/module-namespace-object-define-own-property.js.dfg-eager-modules modules.yaml/modules/module-namespace-object-define-own-property.js.dfg-eager-no-cjit-validate-modules modules.yaml/modules/module-namespace-object-define-own-property.js.ftl-eager-modules modules.yaml/modules/module-namespace-object-define-own-property.js.ftl-eager-no-cjit-modules modules.yaml/modules/module-namespace-object-define-own-property.js.ftl-no-cjit-no-inline-validate-modules modules.yaml/modules/module-namespace-object-define-own-property.js.ftl-no-cjit-small-pool-modules modules.yaml/modules/module-namespace-object-define-own-property.js.ftl-no-cjit-validate-modules modules.yaml/modules/module-namespace-object-define-own-property.js.no-cjit-validate-phases-modules modules.yaml/modules/module-namespace-object-define-own-property.js.no-llint-modules ERROR: Unchecked JS exception: This scope can throw a JS exception: defineOwnNonIndexProperty @ ./runtime/JSObject.cpp:3708 (ExceptionScope::m_recursionDepth was 8) But the exception was unchecked as of this scope: defineOwnProperty @ ./runtime/JSModuleNamespaceObject.cpp:242 (ExceptionScope::m_recursionDepth was 7) Unchecked exception detected at: 1 0x115bacd8e JSC::VM::verifyExceptionCheckNeedIsSatisfied(unsigned int, JSC::ExceptionEventLocation&) 2 0x115b875bf JSC::ThrowScope::~ThrowScope() 3 0x115b82755 JSC::ThrowScope::~ThrowScope() 4 0x1159d7d83 JSC::JSModuleNamespaceObject::defineOwnProperty(JSC::JSObject*, JSC::JSGlobalObject*, JSC::PropertyName, JSC::PropertyDescriptor const&, bool) 5 0x115aa462b JSC::objectConstructorDefineProperty(JSC::JSGlobalObject*, JSC::CallFrame*) 6 0x20919b401178 7 0x114595a29 llint_entry 8 0x114595a29 llint_entry 9 0x114595a29 llint_entry 10 0x114575343 vmEntryToJavaScript 11 0x115421d9b JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) 12 0x1154240b5 JSC::Interpreter::executeModuleProgram(JSC::ModuleProgramExecutable*, JSC::JSGlobalObject*, JSC::JSModuleEnvironment*) 13 0x1159ea409 JSC::JSModuleRecord::evaluate(JSC::JSGlobalObject*) 14 0x1156ff48e JSC::AbstractModuleRecord::evaluate(JSC::JSGlobalObject*) 15 0x1159d6da5 JSC::JSModuleLoader::evaluateNonVirtual(JSC::JSGlobalObject*, JSC::JSValue, JSC::JSValue, JSC::JSValue) 16 0x1159d6cfa JSC::JSModuleLoader::evaluate(JSC::JSGlobalObject*, JSC::JSValue, JSC::JSValue, JSC::JSValue) 17 0x1159db89d JSC::moduleLoaderEvaluate(JSC::JSGlobalObject*, JSC::CallFrame*) 18 0x20919b401178 19 0x114595986 llint_entry 20 0x114595a29 llint_entry 21 0x114595a29 llint_entry 22 0x114595986 llint_entry 23 0x114595a29 llint_entry 24 0x114595986 llint_entry 25 0x114575343 vmEntryToJavaScript 26 0x115421d9b JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) 27 0x115422557 JSC::Interpreter::executeCall(JSC::JSGlobalObject*, JSC::JSObject*, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 28 0x11577380d JSC::call(JSC::JSGlobalObject*, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 29 0x115773ae3 JSC::profiledCall(JSC::JSGlobalObject*, JSC::ProfilingReason, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 30 0x1159d3381 JSC::JSMicrotask::run(JSC::JSGlobalObject*) 31 0x115bac9c3 JSC::QueuedTask::run() 32 0x115bac851 JSC::VM::drainMicrotasks() 33 0x10fc55a03 runWithOptions(GlobalObject*, CommandLine&, bool&) 34 0x10fc1464a jscmain(int, char**)::$_8::operator()(JSC::VM&, GlobalObject*, bool&) const 35 0x10fbea2be int runJSC<jscmain(int, char**)::$_8>(CommandLine const&, bool, jscmain(int, char**)::$_8 const&) 36 0x10fbe7ee5 jscmain(int, char**) 37 0x10fbe7c2e main 38 0x7fff6d8eacc9 start
Attachments
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2020-09-17 21:18:36 PDT
Seeing this on the Debug JSC bot:
https://build.webkit.org/builders/Apple-Catalina-Debug-JSC-Tests/builds/1560/steps/jscore-test/logs/stdio
Radar WebKit Bug Importer
Comment 2
2020-09-18 09:57:08 PDT
<
rdar://problem/69157632
>
Yusuke Suzuki
Comment 3
2020-09-20 02:14:13 PDT
Committed
r267324
: <
https://trac.webkit.org/changeset/267324
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug