Unreviewed, use RELEASE_AND_RETURN to suppress exception verification failure https://bugs.webkit.org/show_bug.cgi?id=216686 <rdar://problem/69157632>

* runtime/JSModuleNamespaceObject.cpp:
(JSC::JSModuleNamespaceObject::defineOwnProperty):

Canonical link: https://commits.webkit.org/229545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267324 268f45cc-cd09-0410-ab3c-d52691b4dbfc